estimate long run varaince via difference based estimator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,cptInference)
 S3method(predict,cptInference)
 export(cpt)
 export(diffInf)
+export(gen_diff_block_sd)
 export(gen_diff_catoni_tavc)
 export(gen_diff_mad)
 export(gen_diff_sd)
