--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method(plot,cptInference)
 S3method(predict,cptInference)
 export(cpt)
 export(diffInf)
-export(gen_diff_block_sd)
-export(gen_diff_catoni_tavc)
-export(gen_diff_mad)
-export(gen_diff_sd)
+export(lrsd_block_diff)
+export(mad_diff)
+export(sd_diff)
